Added one slide and cool css stuff

--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
 				<div style="font-size: 2em; text-align: -webkit-right;">A TALK BY SHEPARD</div>
 			</div>
 
-			<div id="two" class="step two" data-x="1200" data-y="0">Android est <span class="scale">libre</span> et <span class="scale">ouvert</span> </div>
+			<div id="two" class="step two" data-x="1200" data-y="0">Android est <span class="scale">libre</span> et <span class="scale">ouvert</span> <br/> <span class="appear">Et c'est ce qui fait sa force !</span></div>
 
+			<div id="three" class="step three" data-x="2400" data-y="0">
+				<span class="x">X</span>
+				<span class="xp">P</span>
+				<span class="xpo">O</span>
+				<span class="xpos">S</span>
+				<span class="xpose">E</span>
+				<span class="xposed">D</span>
+
+				<div class="appear" style="font-size: 3em; text-align: -webkit-right; color:#1976D2;">SHALL WE BEGIN ?</div>
+			</div>
 
 		</div>
 
