--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body class="impress-not-supported impress">
 
 		<div class="fallback-message">
-			Your web browser stinks shit
+			<span style="font-size: 16px;">You web browser does not support impress.js, what a shame !</span>
 		</div>
 
 		<div id="impress">
@@ -135,8 +135,10 @@ public void handleInitPackageResources(InitPackageResourcesParam resparam) throw
 
 
 			<div id="eleven" class="step eleven" data-x="12000" data-y="0">
-				<img class="questions" src="img/questions.jpg" alt="boot_process"/>
-			</div>					
+				<img class="questions" src="img/questions.jpg" alt="questions_meme"/>
+			</div>		
+
+		</div>			
 
 		<div class="hint">
 			<p>Use a spacebar or arrow keys to navigate</p>
