Minor changed and fixed a ssl link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<link href="css/xposed.css" rel="stylesheet" />
 		<link href="css/prettify.css" rel="stylesheet" />
-		<link href="http://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet" type="text/css">
 
 	</head>
 
@@ -24,7 +24,7 @@
 
 			<div id="one" class="step" data-x="0" data-y="0">
 				<div class="first">ANDROID RUNTIME<br/><span style="font-size: 2em; color: #000;">HACKING</span><br/>WITH XPOSED</div><br/><br/>
-				<div style="font-size: 2em; text-align: -webkit-right;">A TALK BY SHEPARD</div>
+				<div style="font-size: 2em; text-align: -webkit-right;">A TALK BY YOHANN 'SHEPARD' LEON</div>
 			</div>
 
 			<div id="two" class="step two" data-x="1200" data-y="0">Android is <span class="scale">free</span> and <span class="scale">open-source</span></div>
